# OpenViz

./: .gitignore  CMakeLists.txt  Sierpinski3D.cpp  Sierpinski3D.h  main.cpp  main.h  makefile
debian/: changelog  control  copyright  debhelper-build-stamp  dirs  files  install  openviz.substvars
debian/.debhelper/openviz/: dbgsym-build-ids
debian/.debhelper/openviz/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/openviz/dbgsym-root/usr/share/doc/: openviz-dbgsym
debian/openviz/DEBIAN/: control  md5sums
obj-x86_64-linux-gnu/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: Axes.cpp  Axes.h  Camera.cpp  Camera.h  Console.cpp  Console.h  Sierpinski.cpp  Sierpinski.h  helper.cpp  helper.h  main.cpp  main.h
